# quizcreator

./: .gitignore
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: api.py  app.py  main.py  pdf_processor.py  quiz_generator.py
fronten-old/: package-lock.json
fronten-old/app/pages/: index.js
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: QuizDisplay.js  QuizDisplay.tsx  QuizSettings.js  QuizSettings.tsx
frontend/src/pages/: index.js
frontend/utils/: mock_data.json
infrastructure/: README.md  cdk.json  package-lock.json  package.json
infrastructure/lambda_base_layer/: Dockerfile  requirements.txt
infrastructure/lib/: infrastructure-stack.ts
